Improve local manga directories config screen

--- a/app/src/main/res/layout/sheet_welcome.xml
+++ b/app/src/main/res/layout/sheet_welcome.xml
@@ -64,6 +64,14 @@
 						android:text="@string/sync_auth"
 						app:chipIcon="@drawable/ic_sync" />
 
+					<com.google.android.material.chip.Chip
+						android:id="@+id/chip_directories"
+						style="@style/Widget.Kotatsu.Chip.Assist"
+						android:layout_width="wrap_content"
+						android:layout_height="wrap_content"
+						android:text="@string/local_manga_directories"
+						app:chipIcon="@drawable/ic_storage" />
+
 				</com.google.android.material.chip.ChipGroup>
 
 			</HorizontalScrollView>
