Add foldable device support (auto two-page)

--- a/app/src/main/res/layout/sheet_reader_config.xml
+++ b/app/src/main/res/layout/sheet_reader_config.xml
@@ -130,6 +130,21 @@
                 android:textColor="?colorOnSurfaceVariant"
                 app:drawableStartCompat="@drawable/ic_split_horizontal" />
 
+            <com.google.android.material.materialswitch.MaterialSwitch
+                android:id="@+id/switch_double_foldable"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="@dimen/margin_small"
+                android:drawablePadding="?android:listPreferredItemPaddingStart"
+                android:minHeight="?android:listPreferredItemHeightSmall"
+                android:paddingStart="?android:listPreferredItemPaddingStart"
+                android:paddingEnd="?android:listPreferredItemPaddingEnd"
+                android:text="@string/auto_double_foldable"
+                android:textAppearance="@style/TextAppearance.Kotatsu.GridTitle"
+                android:textColor="?colorOnSurfaceVariant"
+                android:visibility="gone"
+                tools:visibility="visible" />
+
             <TextView
                 android:id="@+id/text_double_sensitivity"
                 android:layout_width="match_parent"
